[package]
name = "skyless"
version = "0.0.1"
edition = "2021"
authors = ["bpawel10 <10183865+bpawel10@users.noreply.github.com>"]
repository = "https://github.com/bpawel10/skyless-crate-reservations"
description = "This crate is reserved for the skyless project."
license = "Unlicense"
readme = "README.md"
